--- a/objects/templates/base.html
+++ b/objects/templates/base.html
@@ -11,47 +11,55 @@
   <style>
 
     #topbar{
-      background: aqua;
+      background: grey;
       padding-top:8px;
       padding-bottom:5px;
       text-align:center;
     }
+
+    #middle{
+      color: black;
+      text-align:center;
+      padding:5px;
+      margin-left:30%;
+      margin-right:30%;
+    }
+
+    #roomlist{
+      padding:5px;
+      margin-bottom:2%;
+      margin-left:30%;
+      margin-right:30%;
+    }
+
+    #middlebar{
+      padding:5px;
+      background: silver;
+      margin-left:30%;
+      margin-right:30%;
+      margin-bottom:2%;
+    }
+
+    #midbutton{
+      margin-bottom:2%;
+    }
+
   </style>
   <body>
     <div id='topbar' class='jumbotron'>
-      <h3>College Permissions</h3>
+      <h2>College Permissions</h2>
     </div>
-  {% for each in buildings %}
-    <div class="accordion" id="accordionExample">
-      <div class="card">
-        <div class="card-header" id="headingOne">
-          <h2 class="mb-0">
-            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              {{ each.name }}
-            </button>
-          </h2>
-        </div>
-
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-          <div class="card-body">
-            <div>
-              {% for r in buildings.rooms %}
-
-                <div class="col-lg-9 col-sm-12" style="margin-left:1vw;">
-                    {{ r.number }}
-                </div>
-                <div class="col-lg-2 col-sm-12" style="float:right;">
-                    {{ r.occupied }}
-                </div>
-
-              {% endfor %}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  {% endfor %}
-
+   {% block content %}
+    <div id='middle'>
+      {% for building in buildings %}
+      <a href="{% url 'RoomList' building.id %}">
+        <button id='midbutton' type="button" class="btn btn-secondary btn-lg btn-block btn-dark">
+          {{ building.name }}
+        </button>
+      </a>
+      {% endfor %}
+    <div>
+  {% endblock %}
 
   </body>
 </html>
