--- a/objects/templates/roomlist.html
+++ b/objects/templates/roomlist.html
@@ -12,6 +12,12 @@
       </div>
       <div class="card-body">
         <p class="card-text">Room status: {% if each.occupied %}Occupied{% else %}Unoccupied{% endif %}</p>
+        <p>
+          <a class="buttonLink btn" href="permission/new">
+            <i class="fas fa-plus" data-toggle="tooltip" data-placement="top" title="submit a response"></i>
+            Submit
+          </a>
+        </p>
       </div>
     </div>
     {% endfor %}
