--- a/objects/templates/roomlist.html
+++ b/objects/templates/roomlist.html
@@ -11,7 +11,8 @@
         <p>Room Number: {{each.number}}</p>
       </div>
       <div class="card-body">
-        <p class="card-text">Room status: {% if each.occupied %}Occupied{% else %}Unoccupied{% endif %}</p>
+        <p class="card-text">{{each.occupied}}
+        </p>
         <p>
           <a class="buttonLink btn" href="permission/new">
             <i class="fas fa-plus" data-toggle="tooltip" data-placement="top" title="submit a response"></i>
