--- a/objects/templates/roomlist.html
+++ b/objects/templates/roomlist.html
@@ -12,7 +12,7 @@
       </div>
       <div class="card-body">
         <p>
-          <a class="buttonLink btn" href="permission/new">
+          <a class="buttonLink btn" href="{% url 'permission' building.id %}">
             <i class="fas fa-plus" data-toggle="tooltip" data-placement="top" title="submit a response"></i>
             Submit
           </a>
